--- a/src/component/TaskInput.css
+++ b/src/component/TaskInput.css
@@ -1,10 +1,15 @@
 .task-container{
-    border: 2px solid black;
     height: 20%;
     width: 50%;
     justify-content: center;
     align-items: center;
     text-align: center;
+    background-color:aliceblue;
+    border-radius: 10px;
+}
+.task-label{
+    font-size: 1.2rem;
+    font-weight: bold;
 }
 .task-input{
     width: 80%;
